--- a/src/components/Onboarding/OnboardingFlow.css
+++ b/src/components/Onboarding/OnboardingFlow.css
@@ -34,7 +34,7 @@
 }
 
 .onboarding-logo .logo-image {
-  height: 56px;
+  height: 64px;
   width: auto;
   object-fit: contain;
 }
